Fix loader z-index

--- a/src/pages/Main/style.scss
+++ b/src/pages/Main/style.scss
@@ -327,6 +327,7 @@
 #loading {
   > .loader {
     position: fixed;
+    z-index: 99;
     bottom: -2rem;
     right: 2rem;
   }
